syntax = "proto3";

package service;
option java_package = "ar.edu.itba.pod.server";

enum Size {
  SIZE_UNSPECIFIED = 0;
  SIZE_SMALL = 1;
  SIZE_MEDIUM = 2;
  SIZE_LARGE = 3;
}

enum PlatformState {
  PLATFORM_STATE_UNSPECIFIED = 0;
  PLATFORM_STATE_IDLE = 1;
  PLATFORM_STATE_BUSY = 2;
  PLATFORM_STATE_CLOSED = 3;
}

enum TrainState {
  TRAIN_STATE_UNSPECIFIED = 0;
  TRAIN_STATE_WAITING = 1;
  TRAIN_STATE_PROCEED = 2;
  TRAIN_STATE_SPLIT_AND_PROCEED = 3;
  TRAIN_STATE_IN_PLATFORM = 4;
  TRAIN_STATE_IN_PLATFORM_DIVIDED = 5;
  TRAIN_STATE_READY_TO_LEAVE = 6;
  TRAIN_STATE_LEFT = 7;
  TRAIN_STATE_REJOINED_AND_LEFT = 8;
}

message Train {
  string id = 1;
  Size train_size = 2;
  int32 occupancy_number = 3;
  bool has_double_traction = 4;
  TrainState train_state = 5;
  int32 previous_occupancy = 6;
}

message Platform {
  int32 id = 1;
  Size platform_size = 2;
  PlatformState state = 3;
  Train train = 4;
}

message TrainAndPlatformValue {
  Train train = 1;
  Platform platform = 2;
}

message PlatformStatus {
  Platform platform = 1;
  string announcement = 6;
}